# advent-of-code

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.org
.github/workflows/: gradle.yml
2022/: README.org
2022/go/: .gitignore  go.mod
2022/go/cmd/day-00/: main.go
2022/kotlin/: .gitignore  build.gradle.kts  run  settings.gradle.kts
2022/kotlin/src/main/kotlin/: Main.kt
2022/python/: day-00.py  day-12.py  util.py
2022/rust/: Cargo.toml
2022/rust/src/day-00/: main.rs
2022/rust/src/day-02/: main.rs
2022/rust/src/day-05/: main.rs
2022/rust/src/day-08/: main.rs
2022/rust/src/day-09/: main.rs
2022/rust/src/day-15/: main.rs
2023/: .gitignore  README.org  advent.opam  dune-project
2023/data/: day03-test.txt
2024/: .gitignore  README.org  build.gradle.kts  settings.gradle.kts
2024/gradle/: libs.versions.toml
2024/puzzles/: day-01.md  day-02.md  day-03.md  day-04.md  day-05.md  day-06.md  day-07.md  day-08.md  day-09.md  day-10.md  day-11.md  day-12.md  day-13.md  day-14.md  day-15.md  day-16.md  day-17.md  day-18.md  day-19.md  day-20.md  day-21.md  day-22.md  day-23.md  day-24.md  day-25.md
2024/src/main/java/ar/zaffa/aoc/: Cli.java
2024/src/main/resources/examples/: day-09.txt
2024/src/main/resources/input/: day-18.txt
2024/src/test/java/ar/zaffa/aoc/: PointTest.java  (+1 more)
kotlin/: .gitignore  settings.gradle.kts
python/: day-00.py  day-01.py  day-07.py  day-12.py
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/day-01/: main.rs
rust/src/day-03/: main.rs
rust/src/day-04/: main.rs
rust/src/day-06/: main.rs
rust/src/day-07/: main.rs
rust/src/day-09/: main.rs
rust/src/day-10/: main.rs
rust/src/day-11/: main.rs
rust/src/day-12/: main.rs
rust/src/day-13/: main.rs
rust/src/day-14/: main.rs
(+38 files in other folders)
