[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "day-00"
path = "src/day-00/main.rs"

[[bin]]
name = "day-01"
path = "src/day-01/main.rs"

[[bin]]
name = "day-02"
path = "src/day-02/main.rs"

[[bin]]
name = "day-03"
path = "src/day-03/main.rs"
