[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"

[[bin]]
name = "day-00"
path = "src/day-00/main.rs"

[[bin]]
name = "day-01"
path = "src/day-01/main.rs"

[[bin]]
name = "day-02"
path = "src/day-02/main.rs"

[[bin]]
name = "day-03"
path = "src/day-03/main.rs"

[[bin]]
name = "day-04"
path = "src/day-04/main.rs"

[[bin]]
name = "day-05"
path = "src/day-05/main.rs"

[[bin]]
name = "day-06"
path = "src/day-06/main.rs"

[[bin]]
name = "day-07"
path = "src/day-07/main.rs"

[[bin]]
name = "day-08"
path = "src/day-08/main.rs"

[[bin]]
name = "day-09"
path = "src/day-09/main.rs"
